2004-08-26  Nick Clifton  <nickc@redhat.com>

	* gas/i386/i386.exp: Group ELF specific tests together.  Move the
	pcrel test into the ELF only section.  Use is_elf_format to test
	for ELF based toolchains.

2004-08-25  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/all/gas.exp: Use `string match ""' instead of `eq ""'.

2004-08-24  Jan Beulich  <jbeulich@novell.com>

	* gas/all/altmacro.[sd]: Split out part from here...
	* gas/all/altmac2.[sd]: ... to here.
	* gas/all/excl.s: New.
	* gas/all/gas.exp: Suppress both tests for a few targets known to
	  break. Run the new (split out) test only when the target doesn't
	  use '!' as a comment character.

2004-08-18  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/branch-swap.s: New testcase.
	* gas/mips/branch-swap.d: New testcase.
	* gas/mips/mips.exp: Run the testcase.

2004-08-18  Nick Clifton  <nickc@redhat.com>

	* gas/macros/strings.s: Remove #NO_APP, accidentally committed as
	part of another patch.

2004-08-15  Nick Clifton  <nickc@redhat.com>

	* gas/all/altmacro.d: Allow for rest of frag being padded to an
	alignment boundary.

	* gas/arm/arm.exp: Run bignum test for ELF based targets only.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* gas/cfi/cfi-alpha-1.d: Adjust for readelf fix.
	* gas/cfi/cfi-alpha-3.d: Likewise.
	* gas/cfi/cfi-i386.d: Likewise.
	* gas/cfi/cfi-m68k.d: Likewise.
	* gas/cfi/cfi-ppc-1.d: Likewise.
	* gas/cfi/cfi-s390-1.d: Likewise.
	* gas/cfi/cfi-s390x-1.d: Likewise.
	* gas/cfi/cfi-sh-1.d: Likewise.
	* gas/cfi/cfi-sparc-1.d: Likewise.
	* gas/cfi/cfi-sparc64-1.d: Likewise.
	* gas/cfi/cfi-x86_64.d: Likewise.

2004-08-13 Jan Beulich <jbeulich@novell.com>

	* gas/all/altmacro.[sd]: New test.
	* gas/all/gas.exp: Run the new test.

2004-08-10  Mark Mitchell  <mark@codesourcery.com>

	* gas/arm/bignum1.s: New test.
	* gas/arm/arm.exp: Run it.

2004-08-06  Paul Brook  <paul@codesourcery.com>

	* gas/arm/pic.s,d: Test RELABS and SBREL relocations.
